--- a/CircleofLife.html
+++ b/CircleofLife.html
@@ -21,8 +21,17 @@ yhex=[2 3 2 1 0 1]; % y-coordinates of the vertices
 </style>
 
 <div class="circle" style="top: 200px; left: 25px"></div>
-<div class="circle" style="top: 250px; left: 100px"></div>
+<div class="circle" style="top: 250px; left: 112.5px"></div>
 <div class="circle" style="top: 200px; left: 200px"></div>
 <div class="circle" style="top: 100px; left: 200px"></div>
-<div class="circle" style="top: 50px; left: 100px"></div>
+<div class="circle" style="top: 50px; left: 112.5px"></div>
 <div class="circle" style="top: 100px; left: 25px"></div>
+
+<!-- Same thing, centered
+<div class="circle" style="top: calc(40%); left: calc(50% - 175px)"></div>
+<div class="circle" style="top: calc(40% + 50px); left: calc(50% - 88.5px)"></div>
+<div class="circle" style="top: calc(40%); left: calc(50%)"></div>
+<div class="circle" style="top: calc(40% - 100px); left: calc(50%)"></div>
+<div class="circle" style="top: calc(40% - 150px); left: calc(50% - 88.5px)"></div>
+<div class="circle" style="top: calc(40% - 100px); left: calc(50% - 175px)"></div>
+//-->
